--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: Something something..
 navbar-links:
   About Me: "aboutme"
   Author's home: "http://rocity.pw"
+  To Buy: "tobuy"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
