--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Author's home: "http://rocity.pw"
   To Buy: "tobuy"
+  The Battle: "extras/battle"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
